fix: change text alignment

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -9,6 +9,7 @@ by Matt Graham
 
 body {
   font:16px 'Overpass', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: justify;
   color:#2b2b2b;
   font-weight:300;
   margin: 0px;
